# openplaudit

./: .gitignore  HANDOVER.md  LICENSE  Package.resolved  Package.swift  README.md  ROADMAP.md  pyproject.toml
OpenPlauditMobile/: project.yml
OpenPlauditMobile/Intents/: RecordIntent.swift
OpenPlauditMobile/OpenPlauditMobile/: App.swift  Info.plist  LiveActivityManager.swift  OpenPlauditMobile.entitlements  Recorder.swift  RecordingListView.swift  RecordingModel.swift  RecordingView.swift  SettingsView.swift  SyncManager.swift  Theme.swift  TranscriptView.swift
OpenPlauditMobile/OpenPlauditMobile.xcodeproj/: project.pbxproj
OpenPlauditMobile/Widgets/: RecordingWidget.swift
Sources/AudioKit/: OpusDecoder.swift  WAVWriter.swift
Sources/BLEKit/: PlaudClient.swift  Protocol.swift  Scanner.swift  Transfer.swift
Sources/COpus/: module.modulemap
Sources/DiarizationKit/: DiarizationResult.swift  Diarizer.swift  MFCCExtractor.swift  SpeakerEmbedding.swift  SpeakerStore.swift  SpectralClusterer.swift
Sources/ImportKit/: AudioConverter.swift  ImportEngine.swift  ImportState.swift
Sources/NetworkKit/: Package.swift  (+4 more)
docs/: CNAME  index.html  plaude-documentation.md  privacy-policy.html  privacy-policy.md  protocol-notes.md  refund-policy.html  terms.html  token-extraction.md
llms.txt/: ble-protocol.md  openplaudit-swift-api.md  plaude-api.md
scripts/: build-release.sh  run-app.sh  verify.sh
tests/: test_cli.py  test_config.py  test_decoder.py  test_protocol.py  test_retry_resume.py  test_state.py  test_sync.py  test_sync_orchestration.py  test_transfer.py
(+72 files in other folders)
