[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plaude"
version = "0.1.0"
description = "Local-first CLI for PLAUD Note AI recorder — BLE sync, Opus decode, Whisper transcription"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ram Sundaram", email = "ram@terrapay.com"}]
dependencies = [
    "bleak>=0.22",
    "opuslib>=3.0",
    "openai-whisper>=20231117",
    "click>=8.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
research = [
    "httpx>=0.27",
    "websockets>=13.0",
]

[project.scripts]
plaude = "plaude.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
